--- a/index.html
+++ b/index.html
@@ -8,10 +8,30 @@
     <meta name="keywords" content="love running, running club, ireland, dublin">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    
-    <title>Document</title>
+
+    <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header> 
+        <a href="index.html">
+            <h1>Love Running</h1>
+            <nav>
+                <ul>
+                    <li> 
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li> 
+                        <a href="#">Gallery</a>
+                    </li>
+                    <li> 
+                        <a href="#">Sign Up</a> 
+                    </li>
+                </ul>
+            </nav>
+        </a>
+     </header>
+    <section> Main image </section>
+    <section> Club ethos </section>
+    <section> Running locations, distances and times </section>
 </body>
 </html>
