--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
         </a>
      </header>
-    <section> Main image </section>
+    <div id="hero-image"></div>>
     <section> Club ethos </section>
     <section> Running locations, distances and times </section>
 </body>
