--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             </nav>
         </a>
      </header>
+     <section id="hero-outer">
     <div id="hero-image"></div>>
+    </section>
     <section> Club ethos </section>
     <section> Running locations, distances and times </section>
 </body>
