--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,17 @@
             </nav>
         </a>
      </header>
+     <section id="photos">
+         <img src="assets/images/athletes.jpeg" alt="Two athletes running together">
+         <img src="assets/images/girls.jpeg" alt="Three girks at charity paint running festival">
+         <img src="assets/images/runner3.jpeg" alt="Solo male jogging on a beach">
+         <img src="assets/images/man.jpeg" alt="Man at charity paint running festival">
+         <img src="assets/images/runner1.jpeg" alt="Solo female runner jogging through Phoenix PArk">
+         <img src="assets/images/runner2.jpeg" alt="runners competing in marathon">
+         <img src="assets/images/runner4.jpeg" alt="Solo female runner jogging on a beach">
+         <img src="assets/images/running_gang.jpeg" alt="Solo male runner jogging. on a beach">
+         <img src="assets/images/mud-run.jpeg" alt="Two women runners taking a muddy selfie after the Mud Runners Championship"
+     </section>
     <footer>
         <ul class="social-networks">
             <li>
